add public user register/create API
